--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 				</div>
 				<div class="header-points">
-					<span class="points">55</span>
+					<span class="points"></span>
 				</div>
 			</div>
 		</div>
