--- a/index.html
+++ b/index.html
@@ -479,7 +479,25 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/select2.min.js"></script>
-<script src="js/main.js"></script>
+
+<!--<script src="js/main.js"></script>-->
+<!---->
+
+<!--V_2-->
+<script src="js/json_js/champions_league_json.js"></script>
+<script src="js/json_js/europa_league_json.js"></script>
+<script src="js/json_js/conference_league_json.js"></script>
+<!---->
+<script src="js/json_js/milanskih_json_js/milanskih_champions_league_json.js"></script>
+<script src="js/json_js/milanskih_json_js/milanskih_europa_league_json.js"></script>
+<script src="js/json_js/milanskih_json_js/milanskih_conference_league_json.js"></script>
+<!---->
+<script src="js/json_js/slmkh_json_js/slmkh_champions_league_json.js"></script>
+<script src="js/json_js/slmkh_json_js/slmkh_europa_league_json.js"></script>
+<script src="js/json_js/slmkh_json_js/slmkh_conference_league_json.js"></script>
+<!---->
+<script src="js/main_js_version.js"></script>
+<!--V_2-->
 
 </body>
 </html>
